// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #e1e4e8;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2);
  padding: 6px 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #959da5;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #2188ff;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2),rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders block 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #e1e4e8;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2);
  padding: 6px 12px;
  display: block;
  width: 100%;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #959da5;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #2188ff;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2),rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders large 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #e1e4e8;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2);
  padding: 6px 12px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 20px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #959da5;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #2188ff;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2),rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders small 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #e1e4e8;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2);
  padding: 6px 12px;
  min-height: 28px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 3px;
  padding-bottom: 3px;
  font-size: 12px;
  line-height: 20px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #959da5;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #2188ff;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2),rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput should render a password input 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292e;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #e1e4e8;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2);
  padding: 6px 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #959da5;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #2188ff;
  box-shadow: inset 0px 2px 0px rgba(225,228,232,0.2),rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    name="password"
    type="password"
  />
</span>
`;
